--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1777,7 +1777,7 @@ body {
 .cid-rjxbTzgdA0 {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/-7-1366x779.png");
+  background-image: url("../../../assets/images/7-1366x779.png");
 }
 @media (min-width: 992px) {
   .cid-rjxbTzgdA0 .mbr-figure {
@@ -1982,7 +1982,7 @@ body {
 .cid-rjxfulgmxv {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-image: url("../../../assets/images/-1366x710.png");
+  background-image: url("../../../assets/images/1366x710.png");
 }
 @media (max-width: 767px) {
   .cid-rjxfulgmxv .media-wrap {
